--- a/studylink-Folder/studylink-frontend/src/components/AuthForm.css
+++ b/studylink-Folder/studylink-frontend/src/components/AuthForm.css
@@ -64,4 +64,11 @@
   font-weight: 500;
 }
 
+.password-mismatch {
+  font-size: 12px;
+  color: #dc3545;
+  margin-top: 4px;
+  font-weight: 500;
+}
+
 
